docs: reescreve e padroniza READMEs da raiz e dos modulos (frontend/backend)