@@ -1,109 +1,100 @@
 # api/ — Backend do EdTech
 
-Backend principal do EdTech, responsável pelas regras de negócio, upload de documentos, controle de versões e geração de logs auditáveis.
+Backend principal do EdTech, responsável pelas regras de negócio, upload de documentos (S3), controle de versões, segurança robusta com JWT/CSRF e geração de logs de auditoria imutáveis (Supabase RLS).
 
 ---
 
-## Responsabilidade
+## 🎯 Responsabilidade
 
-- Receber e processar requisições HTTP autenticadas
-- Gerenciar upload de documentos (PDFs, datasets, relatórios)
-- Controlar versões de documentos por usuário
-- Registrar logs de auditoria centralizados e inalteráveis
-- Aplicar isolamento estrito entre usuários e projetos
+- Receber, validar e processar requisições HTTP do frontend.
+- Gerenciar upload de PDFs e datasets via Cloud Storage (Supabase).
+- Controlar papéis e acessos granulares (Pesquisador, Orientador, Auditor).
+- Gerar Logs Inalteráveis de todas as operações sensíveis (inseridos sob RLS estrito).
+- Expor contratos de API coesos e bem estruturados.
 
 ---
 
-## Stack
+## 🛠️ Stack Tecnológica
 
 | Tecnologia | Versão | Função |
 | :--- | :---: | :--- |
-| **Java** | 17 LTS | Linguagem principal |
-| **Spring Boot** | 3.x | Framework web e autoconfiguração |
-| **Spring Security** | — | Proteção de rotas e controle de acesso |
-| **Flyway** | — | Migrações de banco de dados versionadas |
-| **PostgreSQL** | — | Banco de dados relacional |
+| **Java** | 21 LTS | Linguagem principal, utilizando Virtual Threads (Project Loom) |
+| **Spring Boot** | 4.1.x | Framework web, injeção de dependência e Data JPA |
+| **Spring Security** | 6.x | Proteção de rotas, controle CORS e mitigação CSRF |
+| **Flyway** | 10.x | Versionamento e migrações do banco de dados relacional |
+| **PostgreSQL** | 15+ | Banco hospedado via Supabase (com Row Level Security) |
+| **Mockito / JUnit 5**| 5.x | Suíte de testes unitários e de integração |
 
 ---
 
-## Arquitetura em Camadas
+## 📂 Arquitetura em Camadas
 
 ```text
 api/src/main/java/com/docvault/
-├── controller/     # Recebe as requisições HTTP e delega ao service
-├── service/        # Regras de negócio e orquestração
-├── repository/     # Acesso ao banco de dados (Spring Data JPA)
-├── model/          # Entidades JPA mapeadas para as tabelas do banco
-├── dto/            # Objetos de transferência de dados (request/response)
-├── config/         # Configurações (Security, Flyway, Cloud Storage)
-└── audit/          # Lógica de logs auditáveis centralizados
+├── controller/     # Rotas HTTP, leitura de cookies CSRF e DTOs de entrada
+├── service/        # Regras de negócio, transações (Transactional)
+├── repository/     # Queries ao banco via Spring Data JPA
+├── model/          # Entidades mapeadas ao PostgreSQL (@Entity)
+├── dto/            # Objetos de Transferência de Dados (request/response)
+├── config/         # Beans (SecurityConfig, Flyway, AWS S3 / GCS, Web)
+└── audit/          # Lógica de Logs de Auditoria injetada transversalmente
 ```
-
-### Fluxo de uma Requisição
-
-```
-HTTP Request → Controller → Service → Repository → Database
-                                  ↘ Audit (log)
-```
-
-Cada camada tem responsabilidade única:
-
-| Camada | Responsabilidade |
-| :--- | :--- |
-| **controller/** | Mapeamento de rotas, validação de entrada, serialização da resposta |
-| **service/** | Regras de negócio, transações, orquestração entre repositórios |
-| **repository/** | Queries ao banco via Spring Data JPA |
-| **model/** | Entidades persistidas (`@Entity`, `@Table`) |
-| **dto/** | Contratos de entrada e saída da API (desacoplados do modelo) |
-| **config/** | Beans de configuração: SecurityConfig, FlywayConfig, StorageConfig |
-| **audit/** | Interceptors e serviços de log imutável de ações do sistema |
 
 ---
 
-## Como Rodar
+## 🔒 Segurança e Conexão (Supabase)
 
-### Com Maven local
+O Backend conecta ao PostgreSQL usando a string **Admin/Service Role** do Supabase. Como a política de RLS (Row Level Security) bloqueia todo acesso anônimo diretamente na API pública do Supabase, nosso Spring Boot atua como um escudo protetor e orquestrador de regras.
 
-Configure um PostgreSQL local ou use o Docker Compose da raiz do projeto. O backend le as seguintes variaveis:
+1. **Autenticação:** Cookies `HttpOnly`, `SameSite=Strict`.
+2. **Proteção:** Ativação dupla de segurança utilizando token Anti-CSRF (`XSRF-TOKEN`).
 
-- `SPRING_DATASOURCE_URL`
-- `SPRING_DATASOURCE_USERNAME`
-- `SPRING_DATASOURCE_PASSWORD`
-- `JWT_SECRET`
-- `JWT_EXPIRATION_MINUTES`
-- `JWT_COOKIE_SECURE`
-- `STORAGE_PROVIDER` (s3 ou gcs)
+---
+
+## 🚀 Como Rodar Localmente
+
+O backend requer variáveis de ambiente para injetar os provedores de nuvem (Storage) e o Banco de Dados.
+
+### 1. Com Docker Compose (Recomendado)
+
+```bash
+# Na raiz do projeto EdTech, copie as variáveis de exemplo
+cp infra/.env.example infra/.env
+
+# (Preencha POSTGRES_PASSWORD, JWT_SECRET e credenciais de nuvem em infra/.env)
+
+# Suba a infraestrutura completa
+docker compose --env-file infra/.env -f infra/docker-compose.yml up --build backend
+```
+
+O backend usará `db:5432` da rede interna.
+
+### 2. Com Maven CLI (Ambiente Dev)
+
+Exporte as variáveis localmente e rode:
 
 ```bash
 cd docvault/api
 mvn spring-boot:run
 ```
 
-### Com Docker Compose
+---
 
-```bash
-cp infra/.env.example infra/.env
-# Preencha POSTGRES_PASSWORD, JWT_SECRET e a configuracao de Storage em infra/.env
-docker compose --env-file infra/.env -f infra/docker-compose.yml up --build
-```
+## 🧪 Notas de Desenvolvimento e Testes (Java 21)
 
-Se a porta local `5432` ja estiver ocupada, altere `POSTGRES_PORT` em `infra/.env`.
-Essa porta e usada apenas para acesso externo ao PostgreSQL; o backend usa `db:5432` dentro da rede do Compose.
+Se estiver rodando a suíte de testes unitários localmente (`mvn test`), o framework do Mockito precisa de privilégios especiais devido ao encapsulamento restrito do Java 21. Nosso `pom.xml` já está configurado com a *JVM Arg* necessária no `maven-surefire-plugin`:
+`-XX:+EnableDynamicAgentLoading`.
 
-### Segurança de autenticação
+---
 
-O backend usa JWT em cookie `HttpOnly`, `SameSite=Strict` e `Path=/`. A flag `Secure` e controlada por `JWT_COOKIE_SECURE` para permitir desenvolvimento local sem HTTPS e ativacao em ambientes HTTPS.
-
-As rotas publicas sao `POST /api/auth/register` e `POST /api/auth/login`. As demais rotas sob `/api/**` exigem cookie JWT valido. A API usa sessao stateless; por isso o CSRF fica desabilitado em conjunto com cookie `SameSite=Strict` e sem sessao server-side.
-
-### Teste de cadastro
+### Teste Rápido de Saúde (Cadastro)
 
 ```bash
 curl -i -X POST http://localhost:8080/api/auth/register \
   -H "Content-Type: application/json" \
   -d '{
-    "name": "Ana Pesquisadora",
-    "email": "ana.pesquisadora@unb.br",
-    "password": "<senha-local>"
+    "name": "Local Admin",
+    "email": "admin@edtech.unb.br",
+    "password": "senha-local-forte"
   }'
 ```
